# C-Developer.-Basic

./: README.md
home_works/hw3/: guess_the_number.cpp
home_works/hw3/src/: random_value.cpp
home_works/hw4/: Ball.hpp
home_works/hw5/: CMakeLists.txt  statistics.cpp
home_works/hw5/include/: istatistics.h  max.h  mean.h  min.h  pct90.h  pct95.h  std.h
home_works/hw5/src/: max.cpp  mean.cpp  min.cpp  pct90.cpp  pct95.cpp  std.cpp
home_works/hw6/: CMakeLists.txt  Generic_Container.h  List_Container.h  Sequential_Container.h  main.cpp
home_works/hw7/: CMakeLists.txt  README.md
home_works/hw7/src/: list.hpp  main.cpp  vector.hpp
home_works/hw7/test/: test_list.cpp  test_vector.cpp
hw3/: CMakeLists.txt  check_value.cpp  game.cpp  game.h  guess_the_number.cpp  high_scores.txt  random_value.cpp  random_value.h
hw3/include/: game.h  random_value.h  read.h  write.h
hw3/src/: game.cpp  random_value.cpp  read.cpp  write.cpp
hw4/: Ball.cpp  Ball.hpp  World.cpp
project/: CMakeLists.txt  README.md  main.cpp  main_calculation.cpp  run.sh
project/calculations/: AstroInertialModeResultMatrix.cpp  AstroInertialModeResultMatrix.h  CoorectionModeResultMatrix.cpp  CoorectionModeResultMatrix.h  Result.cpp  Result.h  getAstroInertialModeResultMatrix.cpp  getCoorectionModeResultMatrix.cpp  getResult.cpp
project/calculations/include/: AstroInertialModeResultMatrix.h  CoorectionModeResultMatrix.h  CorrectionModeResultMatrix.h  Result.h  Service.h
project/calculations/src/: AstroInertialModeResultMatrix.cpp  CoorectionModeResultMatrix.cpp  CorrectionModeResultMatrix.cpp  Result.cpp  Service.cpp
project/include/: AstroMatrix.h  ConjugateMatrix.h  GeographyMatrix.h  Matrix.h  Rotation.h  SateliteMatrix.h  TimeMatrix.h
project/materials/: project_architecture.drawio  Защита проекта.pptx
project/matrixs/include/: AstroMatrix.h  ConjugateMatrix.h  GeographyMatrix.h  Matrix.h  Rotation.h  TimeMatrix.h
project/matrixs/src/: AstroMatrix.cpp  ConjugateMatrix.cpp  GeographyMatrix.cpp  Matrix.cpp  Rotation.cpp  TimeMatrix.cpp
project/modes/include/: AstroInertialMode.h  CorrectionMode.h
project/modes/src/: AstroInertialMode.cpp  CorrectionMode.cpp
project/src/: AstroMatrix.cpp  ConjugateMatrix.cpp  GeographyMatrix.cpp  Matrix.cpp  Rotation.cpp  SateliteMatrix.cpp  TimeMatrix.cpp  astro_inertial_mode.cpp
